@@ -24,10 +24,6 @@
 			Install the required libraries:
 		</p>
 		<p class="tty">
-			sudo apt-get install sqlite3
-			<br />
-			sudo apt-get install python-pysqlite2
-			<br />
 			sudo apt-get install python-configobj
 			<br />
 			sudo apt-get install python-serial
