@@ -29,7 +29,7 @@ debug = 0
 socket_timeout = 20
 
 # Current version
-version = 1.12.4b1
+version = 1.12.4b2
 
 ############################################################################################
 
@@ -329,3 +329,4 @@ version = 1.12.4b1
     [[WxEngine]]
         # The list of services the main weewx engine should run:
         service_list = weewx.wxengine.StdCalibrate, weewx.wxengine.StdQC, weewx.wxengine.StdArchive, weewx.wxengine.StdTimeSynch, weewx.wxengine.StdPrint, weewx.wxengine.StdRESTful, weewx.wxengine.StdReportService
+
